--- a/gallery.html
+++ b/gallery.html
@@ -80,7 +80,7 @@
                                 <a class="dropdown-item" href="#" target="_blank">facebook</a>
                                 <a class="dropdown-item" href="https://instagram.com/Glampinglagomuisca?utm_medium=copy_link" target="_blank">Instagram</a>
                                 <a class="dropdown-item" href="https://maps.app.goo.gl/5hRyKr1ZzbhuKcXy5" target="_blank">Google</a>
-                                <a class="dropdown-item" href="https://api.whatsapp.com/send?phone=+573203985300" target="_blank">whatsapp</a>
+                                <a class="dropdown-item" href="https://api.whatsapp.com/send?phone=+573115396653" target="_blank">whatsapp</a>
 
                             </div>
                         </li>
@@ -235,7 +235,7 @@
                         <h2>¡ Reserva directamente con nosotros aqui !</h2>
                     </div>
                     <center>
-                        <a class="lightbox box_a" href="https://api.whatsapp.com/send?phone=+573203985300" target="_blank">
+                        <a class="lightbox box_a" href="https://api.whatsapp.com/send?phone=+573115396653" target="_blank">
                             <img class="img-fluid iconoImg" src="images/logo.jpg" alt="Gallery Images domos aquitania boyaca">
                         </a>
                     </center>
@@ -254,7 +254,7 @@
                     <div class="overflow-hidden">
                         <h4>Telefono</h4>
                         <p class="lead">
-                            +57 320 3985300
+                            +57 3115396653
                         </p>
                     </div>
                 </div>
@@ -302,7 +302,7 @@
                     <h3>INFORMACIÓN DEL CONTACTO
                     </h3>
                     <p class="lead">Vereda Susaca - Sector, Aquitania, Boyacá</p>
-                    <p class="lead"><a href="https://api.whatsapp.com/send?phone=+573203985300" target="_blank">+57 320 3985300</a></p>
+                    <p class="lead"><a href="https://api.whatsapp.com/send?phone=+573115396653" target="_blank">+57 3115396653</a></p>
                     <p><a href="mailto:lagomuisca@gmail.com"> lagomuisca@gmail.com</a></p>
                 </div>
                 <div class="col-lg-3 col-md-6">
