--- a/gallery.html
+++ b/gallery.html
@@ -131,7 +131,7 @@
                         </a>
                     </div>
                     <div class="col-sm-12 col-md-4 col-lg-4">
-                        <a class="lightbox" href="images/galeria/11.jpeg">
+                        <a class="lightbox" href="images/galeria/fot_0002.jpg">
                             <img class="img-fluid" src="images/galeria/11.jpeg" alt="Gallery Images">
                         </a>
                     </div>
