--- a/gallery.html
+++ b/gallery.html
@@ -132,7 +132,7 @@
                     </div>
                     <div class="col-sm-12 col-md-4 col-lg-4">
                         <a class="lightbox" href="images/galeria/fot_0002.jpg">
-                            <img class="img-fluid" src="images/galeria/11.jpeg" alt="Gallery Images">
+                            <img class="img-fluid" src="images/galeria/fot_0002.jpg" alt="Gallery Images">
                         </a>
                     </div>
                     <div class="col-sm-6 col-md-4 col-lg-4">
