--- a/gallery.html
+++ b/gallery.html
@@ -107,6 +107,27 @@
     </div>
     <!-- End All Pages -->
 
+	<!-- Start Video Section -->
+<div class="video-section">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="heading-title text-center">
+                    <h2>Lago de tota</h2>
+                </div>
+                <div class="video-container">
+                    <video controls width="100%">
+                        <source src="video/tu-video.mp4" type="video/mp4">
+                        Tu navegador no soporta el formato de video.
+                    </video>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- End Video Section -->
+
+
     <!-- Start Gallery -->
     <div class="gallery-box">
         <div class="container-fluid">
