--- a/gallery.html
+++ b/gallery.html
@@ -117,7 +117,7 @@
                 </div>
                 <div class="video-container">
                     <video controls width="100%">
-                        <source src="video/tu-video.mp4" type="video/mp4">
+                        <source src="video/video_lago_01.mp4" type="video/mp4">
                         Tu navegador no soporta el formato de video.
                     </video>
                 </div>
